--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "laravel/cashier": "^15.6",
         "laravel/framework": "^11.0",
         "laravel/tinker": "^2.9",
+        "livewire/flux": "^2.0",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0"
     },
